# Distributed-Computing

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  mingw32_launch.bat  mingw64_launch.bat  unix_launch.sh  vs32_launch.bat  vs64_launch.bat
examples/template/: CMakeLists.txt  Makefile  client.c  server.c
examples/template/client/: CMakeLists.txt
examples/template/client/src/: client.c
examples/template/server/: CMakeLists.txt  mingw64_launch.bat
examples/template/server/src/: server.c
include/: districomp.h  mailbox.h  mutex.h  webserver.h
lib/: districomp.c  districomp.h  mailbox.c  mailbox.h  mutex.h  webserver.c  webserver.h
os/: Makefile  README.txt  networkSetup.sh  unix_launch.sh  win_launch.bat
src/: districomp.c  mailbox.c  mutex.c  webserver.c
webserver/: Readme.txt  webserver.js
